:hammer: Add page load animation

--- a/career.html
+++ b/career.html
@@ -13,8 +13,9 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css" />
   </head>
-  <body>
+  <body class="animate__animated animate__slower animate__fadeIn">
     <div class="main-container">
       <!-- main nav -->
       <div id="mainNav" class="main-nav">
