--- a/contact-us.html
+++ b/contact-us.html
@@ -13,6 +13,7 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css" />
   </head>
   <body>
     <div class="main-container">
@@ -99,104 +100,99 @@
         </div>
       </div>
 
-      <!-- contacts -->
-      <div class="contacts">
-        <div class="content-container pe-lg-0">
-          <div class="row gx-5 gx-xxxl-110px">
-            <div class="col-xl-4 position-relative z-2">
-              <div class="contacts-content">
-                <h1 class="contacts-title">Contacts</h1>
-                <h2 class="contacts-subtitle">
-                  Let’s
-                  <br />
-                  meet up!
-                </h2>
-                <p class="contacts-text">Our house is at Cilandak, Jakarta Selatan. Come over, we have good coffee there!</p>
-                <p class="contacts-text fw-bold">
-                  Jl. Intan RSPP, C No. 5B
-                  <br />
-                  Cilandak, Jakarta Selatan 12430
-                </p>
-                <p class="contacts-text fw-bold mb-0">
-                  <span class="fw-normal">Or call us at,</span>
-                  <br />
-                  +62 859 2076 1260 / Dalbert
-                  <br />
-                  ask@62teknologi.com
-                </p>
+      <div class="animate__animated animate__slower animate__fadeIn">
+        <!-- contacts -->
+        <div class="contacts">
+          <div class="content-container pe-lg-0">
+            <div class="row gx-5 gx-xxxl-110px">
+              <div class="col-xl-4 position-relative z-2">
+                <div class="contacts-content">
+                  <h1 class="contacts-title">Contacts</h1>
+                  <h2 class="contacts-subtitle">
+                    Let’s
+                    <br />
+                    meet up!
+                  </h2>
+                  <p class="contacts-text">Our house is at Cilandak, Jakarta Selatan. Come over, we have good coffee there!</p>
+                  <p class="contacts-text fw-bold">
+                    Jl. Intan RSPP, C No. 5B
+                    <br />
+                    Cilandak, Jakarta Selatan 12430
+                  </p>
+                  <p class="contacts-text fw-bold mb-0">
+                    <span class="fw-normal">Or call us at,</span>
+                    <br />
+                    +62 859 2076 1260 / Dalbert
+                    <br />
+                    ask@62teknologi.com
+                  </p>
+                </div>
               </div>
-            </div>
-            <div class="col-xl-8 position-relative d-none d-lg-block z-1">
-              <img src="assets/images/img-contacts.jpg" class="contacts-img" />
+              <div class="col-xl-8 position-relative d-none d-lg-block z-1">
+                <img src="assets/images/img-contacts.jpg" class="contacts-img" />
+              </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- footer -->
-      <div class="footer">
-        <div class="content-container">
-          <h4 class="footer-title">Enam Dua</h4>
-          <div class="footer-menus">
-            <div class="footer-menu">
-              <p class="footer-menu-title">Industries</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">Finance</a>
-                <a href="#" class="footer-menu-item">Education</a>
-                <a href="#" class="footer-menu-item">E-commerce</a>
-                <a href="#" class="footer-menu-item">Data Science & Statistic</a>
-                <a href="#" class="footer-menu-item">Agriculture</a>
-                <a href="#" class="footer-menu-item">Retail</a>
-                <a href="#" class="footer-menu-item">Sports</a>
-                <a href="#" class="footer-menu-item">Electronics</a>
-                <a href="#" class="footer-menu-item">Beauty</a>
+        <!-- footer -->
+        <div class="footer">
+          <div class="content-container">
+            <h4 class="footer-title">Enam Dua</h4>
+            <div class="footer-menus">
+              <div class="footer-menu">
+                <p class="footer-menu-title">Industries</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Finance</a>
+                  <a href="#" class="footer-menu-item">Education</a>
+                  <a href="#" class="footer-menu-item">E-commerce</a>
+                  <a href="#" class="footer-menu-item">Data Science & Statistic</a>
+                  <a href="#" class="footer-menu-item">Agriculture</a>
+                  <a href="#" class="footer-menu-item">Retail</a>
+                  <a href="#" class="footer-menu-item">Sports</a>
+                  <a href="#" class="footer-menu-item">Electronics</a>
+                  <a href="#" class="footer-menu-item">Beauty</a>
+                </div>
+              </div>
+              <div class="footer-menu">
+                <p class="footer-menu-title">Expertise</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">System & Software Developement</a>
+                  <a href="#" class="footer-menu-item">Digital Transformation</a>
+                  <a href="#" class="footer-menu-item">Program Language</a>
+                </div>
+              </div>
+              <div class="footer-menu">
+                <p class="footer-menu-title">Our world</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Values & culture</a>
+                  <a href="#" class="footer-menu-item">the talents</a>
+                  <a href="#" class="footer-menu-item">why enam dua</a>
+                </div>
+              </div>
+              <div class="footer-menu">
+                <p class="footer-menu-title">Careers</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Join us</a>
+                </div>
               </div>
             </div>
-
-            <div class="footer-menu">
-              <p class="footer-menu-title">Expertise</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">System & Software Developement</a>
-                <a href="#" class="footer-menu-item">Digital Transformation</a>
-                <a href="#" class="footer-menu-item">Program Language</a>
-              </div>
+            <div class="footer-other-menus">
+              <a href="#" class="footer-other-menu">Contact us</a>
+              <a href="#" class="footer-other-menu">Our offices</a>
+              <a href="#" class="footer-other-menu">Get in touch</a>
             </div>
-
-            <div class="footer-menu">
-              <p class="footer-menu-title">Our world</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">Values & culture</a>
-                <a href="#" class="footer-menu-item">the talents</a>
-                <a href="#" class="footer-menu-item">why enam dua</a>
-              </div>
+            <div class="footer-other-menus">
+              <a href="#" class="footer-other-menu">Follow us</a>
+              <a href="#" class="footer-other-menu">Facebook</a>
+              <a href="#" class="footer-other-menu">Instagram</a>
+              <a href="#" class="footer-other-menu">LinkedIn</a>
+              <a href="#" class="footer-other-menu">Twitter</a>
+              <a href="#" class="footer-other-menu">Youtube</a>
             </div>
-
-            <div class="footer-menu">
-              <p class="footer-menu-title">Careers</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">Join us</a>
-              </div>
+            <div class="mt-5">
+              <p class="footer-c">© 2021 Enam Dua.</p>
+              <p class="footer-c">All rights reserved.</p>
             </div>
-          </div>
-
-          <div class="footer-other-menus">
-            <a href="#" class="footer-other-menu">Contact us</a>
-            <a href="#" class="footer-other-menu">Our offices</a>
-            <a href="#" class="footer-other-menu">Get in touch</a>
-          </div>
-
-          <div class="footer-other-menus">
-            <a href="#" class="footer-other-menu">Follow us</a>
-            <a href="#" class="footer-other-menu">Facebook</a>
-            <a href="#" class="footer-other-menu">Instagram</a>
-            <a href="#" class="footer-other-menu">LinkedIn</a>
-            <a href="#" class="footer-other-menu">Twitter</a>
-            <a href="#" class="footer-other-menu">Youtube</a>
-          </div>
-
-          <div class="mt-5">
-            <p class="footer-c">© 2021 Enam Dua.</p>
-            <p class="footer-c">All rights reserved.</p>
           </div>
         </div>
       </div>
