--- a/expertise.html
+++ b/expertise.html
@@ -13,6 +13,7 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css" />
   </head>
   <body>
     <div class="main-container">
@@ -99,113 +100,108 @@
         </div>
       </div>
 
-      <!-- expertise -->
-      <div class="expertise">
-        <div class="content-container">
-          <h1 class="expertise-title">Expertise</h1>
-          <div class="row g-5 gx-xxxl-80px gy-xxxl-200px">
-            <div class="col-xl-6">
-              <h2 class="expertise-item-title">System & Software Development</h2>
-            </div>
-            <div class="col-xl-6">
-              <p class="expertise-item-text">We design, develop, maintain, and transform all kinds of systems & software.</p>
-            </div>
-            <div class="col-xl-6">
-              <h2 class="expertise-item-title">Digital Transformation</h2>
-            </div>
-            <div class="col-xl-6">
-              <p class="expertise-item-text">Enam Dua facilitate businesses to confidently embrace their digital transformation.</p>
-            </div>
-            <div class="col-xl-6">
-              <h2 class="expertise-item-title">Programming Language</h2>
-            </div>
-            <div class="col-xl-6">
-              <ul class="expertise-list-items">
-                <li class="expertise-list-item">PHP</li>
-                <li class="expertise-list-item">Lavarel</li>
-                <li class="expertise-list-item">Vue</li>
-                <li class="expertise-list-item">React</li>
-                <li class="expertise-list-item">Postgres</li>
-                <li class="expertise-list-item">MariaDB</li>
-                <li class="expertise-list-item">MySql</li>
-                <li class="expertise-list-item">Redis</li>
-                <li class="expertise-list-item">Jenkins</li>
-                <li class="expertise-list-item">Cypress</li>
-                <li class="expertise-list-item">HTML5</li>
-                <li class="expertise-list-item">Javascript</li>
-                <li class="expertise-list-item">CSS 3</li>
-                <li class="expertise-list-item">iOS</li>
-                <li class="expertise-list-item">Android</li>
-              </ul>
+      <div class="animate__animated animate__slower animate__fadeIn">
+        <!-- expertise -->
+        <div class="expertise">
+          <div class="content-container">
+            <h1 class="expertise-title">Expertise</h1>
+            <div class="row g-5 gx-xxxl-80px gy-xxxl-200px">
+              <div class="col-xl-6">
+                <h2 class="expertise-item-title">System & Software Development</h2>
+              </div>
+              <div class="col-xl-6">
+                <p class="expertise-item-text">We design, develop, maintain, and transform all kinds of systems & software.</p>
+              </div>
+              <div class="col-xl-6">
+                <h2 class="expertise-item-title">Digital Transformation</h2>
+              </div>
+              <div class="col-xl-6">
+                <p class="expertise-item-text">Enam Dua facilitate businesses to confidently embrace their digital transformation.</p>
+              </div>
+              <div class="col-xl-6">
+                <h2 class="expertise-item-title">Programming Language</h2>
+              </div>
+              <div class="col-xl-6">
+                <ul class="expertise-list-items">
+                  <li class="expertise-list-item">PHP</li>
+                  <li class="expertise-list-item">Lavarel</li>
+                  <li class="expertise-list-item">Vue</li>
+                  <li class="expertise-list-item">React</li>
+                  <li class="expertise-list-item">Postgres</li>
+                  <li class="expertise-list-item">MariaDB</li>
+                  <li class="expertise-list-item">MySql</li>
+                  <li class="expertise-list-item">Redis</li>
+                  <li class="expertise-list-item">Jenkins</li>
+                  <li class="expertise-list-item">Cypress</li>
+                  <li class="expertise-list-item">HTML5</li>
+                  <li class="expertise-list-item">Javascript</li>
+                  <li class="expertise-list-item">CSS 3</li>
+                  <li class="expertise-list-item">iOS</li>
+                  <li class="expertise-list-item">Android</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- footer -->
-      <div class="footer">
-        <div class="content-container">
-          <h4 class="footer-title">Enam Dua</h4>
-          <div class="footer-menus">
-            <div class="footer-menu">
-              <p class="footer-menu-title">Industries</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">Finance</a>
-                <a href="#" class="footer-menu-item">Education</a>
-                <a href="#" class="footer-menu-item">E-commerce</a>
-                <a href="#" class="footer-menu-item">Data Science & Statistic</a>
-                <a href="#" class="footer-menu-item">Agriculture</a>
-                <a href="#" class="footer-menu-item">Retail</a>
-                <a href="#" class="footer-menu-item">Sports</a>
-                <a href="#" class="footer-menu-item">Electronics</a>
-                <a href="#" class="footer-menu-item">Beauty</a>
+        <!-- footer -->
+        <div class="footer">
+          <div class="content-container">
+            <h4 class="footer-title">Enam Dua</h4>
+            <div class="footer-menus">
+              <div class="footer-menu">
+                <p class="footer-menu-title">Industries</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Finance</a>
+                  <a href="#" class="footer-menu-item">Education</a>
+                  <a href="#" class="footer-menu-item">E-commerce</a>
+                  <a href="#" class="footer-menu-item">Data Science & Statistic</a>
+                  <a href="#" class="footer-menu-item">Agriculture</a>
+                  <a href="#" class="footer-menu-item">Retail</a>
+                  <a href="#" class="footer-menu-item">Sports</a>
+                  <a href="#" class="footer-menu-item">Electronics</a>
+                  <a href="#" class="footer-menu-item">Beauty</a>
+                </div>
+              </div>
+              <div class="footer-menu">
+                <p class="footer-menu-title">Expertise</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">System & Software Developement</a>
+                  <a href="#" class="footer-menu-item">Digital Transformation</a>
+                  <a href="#" class="footer-menu-item">Program Language</a>
+                </div>
+              </div>
+              <div class="footer-menu">
+                <p class="footer-menu-title">Our world</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Values & culture</a>
+                  <a href="#" class="footer-menu-item">the talents</a>
+                  <a href="#" class="footer-menu-item">why enam dua</a>
+                </div>
+              </div>
+              <div class="footer-menu">
+                <p class="footer-menu-title">Careers</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Join us</a>
+                </div>
               </div>
             </div>
-
-            <div class="footer-menu">
-              <p class="footer-menu-title">Expertise</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">System & Software Developement</a>
-                <a href="#" class="footer-menu-item">Digital Transformation</a>
-                <a href="#" class="footer-menu-item">Program Language</a>
-              </div>
+            <div class="footer-other-menus">
+              <a href="#" class="footer-other-menu">Contact us</a>
+              <a href="#" class="footer-other-menu">Our offices</a>
+              <a href="#" class="footer-other-menu">Get in touch</a>
             </div>
-
-            <div class="footer-menu">
-              <p class="footer-menu-title">Our world</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">Values & culture</a>
-                <a href="#" class="footer-menu-item">the talents</a>
-                <a href="#" class="footer-menu-item">why enam dua</a>
-              </div>
+            <div class="footer-other-menus">
+              <a href="#" class="footer-other-menu">Follow us</a>
+              <a href="#" class="footer-other-menu">Facebook</a>
+              <a href="#" class="footer-other-menu">Instagram</a>
+              <a href="#" class="footer-other-menu">LinkedIn</a>
+              <a href="#" class="footer-other-menu">Twitter</a>
+              <a href="#" class="footer-other-menu">Youtube</a>
             </div>
-
-            <div class="footer-menu">
-              <p class="footer-menu-title">Careers</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">Join us</a>
-              </div>
+            <div class="mt-5">
+              <p class="footer-c">© 2021 Enam Dua.</p>
+              <p class="footer-c">All rights reserved.</p>
             </div>
-          </div>
-
-          <div class="footer-other-menus">
-            <a href="#" class="footer-other-menu">Contact us</a>
-            <a href="#" class="footer-other-menu">Our offices</a>
-            <a href="#" class="footer-other-menu">Get in touch</a>
-          </div>
-
-          <div class="footer-other-menus">
-            <a href="#" class="footer-other-menu">Follow us</a>
-            <a href="#" class="footer-other-menu">Facebook</a>
-            <a href="#" class="footer-other-menu">Instagram</a>
-            <a href="#" class="footer-other-menu">LinkedIn</a>
-            <a href="#" class="footer-other-menu">Twitter</a>
-            <a href="#" class="footer-other-menu">Youtube</a>
-          </div>
-
-          <div class="mt-5">
-            <p class="footer-c">© 2021 Enam Dua.</p>
-            <p class="footer-c">All rights reserved.</p>
           </div>
         </div>
       </div>
