--- a/downloads.html
+++ b/downloads.html
@@ -13,6 +13,7 @@
 
     <!-- styles -->
     <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css" />
   </head>
   <body>
     <div class="main-container">
@@ -99,131 +100,126 @@
         </div>
       </div>
 
-      <!-- downloads -->
-      <div class="downloads">
-        <div class="content-container pe-lg-0">
-          <div class="row gx-5 gx-xxxl-110px">
-            <div class="col-xl-5 position-relative z-2">
-              <div class="downloads-content">
-                <h1 class="downloads-title">
-                  Learn more
-                  <br />
-                  with enamdua
-                </h1>
-                <p class="downloads-text">We've compiled a list of our white papers and case studies for you below. Feel free to download any that interest you.</p>
+      <div class="animate__animated animate__slower animate__fadeIn">
+        <!-- downloads -->
+        <div class="downloads">
+          <div class="content-container pe-lg-0">
+            <div class="row gx-5 gx-xxxl-110px">
+              <div class="col-xl-5 position-relative z-2">
+                <div class="downloads-content">
+                  <h1 class="downloads-title">
+                    Learn more
+                    <br />
+                    with enamdua
+                  </h1>
+                  <p class="downloads-text">We've compiled a list of our white papers and case studies for you below. Feel free to download any that interest you.</p>
+                </div>
               </div>
-            </div>
-            <div class="col-xl-7 position-relative z-1 d-none d-lg-block">
-              <img src="assets/images/img-downloads.jpg" class="downloads-img" />
+              <div class="col-xl-7 position-relative z-1 d-none d-lg-block">
+                <img src="assets/images/img-downloads.jpg" class="downloads-img" />
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <!-- files -->
-      <div class="files">
-        <div class="content-container">
-          <div class="row gx-0 gx-xxxl-5 gy-4 gy-xxxl-0">
-            <div class="col-xl-3">
-              <a href="assets/files/example.docs" target="_blank">
-                <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
-                  <h3 class="file-title">Careers</h3>
-                  <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
-                </div>
-              </a>
-            </div>
-            <div class="col-xl-3">
-              <a href="assets/files/example.docs" target="_blank">
-                <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
-                  <h3 class="file-title">Careers</h3>
-                  <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
-                </div>
-              </a>
-            </div>
-            <div class="col-xl-3">
-              <a href="assets/files/example.docs" target="_blank">
-                <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
-                  <h3 class="file-title">Careers</h3>
-                  <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
-                </div>
-              </a>
-            </div>
-            <div class="col-xl-3">
-              <a href="assets/files/example.docs" target="_blank">
-                <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
-                  <h3 class="file-title">Careers</h3>
-                  <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
-                </div>
-              </a>
+        <!-- files -->
+        <div class="files">
+          <div class="content-container">
+            <div class="row gx-0 gx-xxxl-5 gy-4 gy-xxxl-0">
+              <div class="col-xl-3">
+                <a href="assets/files/example.docs" target="_blank">
+                  <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
+                    <h3 class="file-title">Careers</h3>
+                    <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
+                  </div>
+                </a>
+              </div>
+              <div class="col-xl-3">
+                <a href="assets/files/example.docs" target="_blank">
+                  <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
+                    <h3 class="file-title">Careers</h3>
+                    <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
+                  </div>
+                </a>
+              </div>
+              <div class="col-xl-3">
+                <a href="assets/files/example.docs" target="_blank">
+                  <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
+                    <h3 class="file-title">Careers</h3>
+                    <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
+                  </div>
+                </a>
+              </div>
+              <div class="col-xl-3">
+                <a href="assets/files/example.docs" target="_blank">
+                  <div class="file" style="background-image: url('assets/images/bg-file.jpg')">
+                    <h3 class="file-title">Careers</h3>
+                    <p class="file-text">An Introduction to Aerodynamics, Software & Certification in Safe Flight</p>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <!-- footer -->
-      <div class="footer">
-        <div class="content-container">
-          <h4 class="footer-title">Enam Dua</h4>
-          <div class="footer-menus">
-            <div class="footer-menu">
-              <p class="footer-menu-title">Industries</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">Finance</a>
-                <a href="#" class="footer-menu-item">Education</a>
-                <a href="#" class="footer-menu-item">E-commerce</a>
-                <a href="#" class="footer-menu-item">Data Science & Statistic</a>
-                <a href="#" class="footer-menu-item">Agriculture</a>
-                <a href="#" class="footer-menu-item">Retail</a>
-                <a href="#" class="footer-menu-item">Sports</a>
-                <a href="#" class="footer-menu-item">Electronics</a>
-                <a href="#" class="footer-menu-item">Beauty</a>
+        <!-- footer -->
+        <div class="footer">
+          <div class="content-container">
+            <h4 class="footer-title">Enam Dua</h4>
+            <div class="footer-menus">
+              <div class="footer-menu">
+                <p class="footer-menu-title">Industries</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Finance</a>
+                  <a href="#" class="footer-menu-item">Education</a>
+                  <a href="#" class="footer-menu-item">E-commerce</a>
+                  <a href="#" class="footer-menu-item">Data Science & Statistic</a>
+                  <a href="#" class="footer-menu-item">Agriculture</a>
+                  <a href="#" class="footer-menu-item">Retail</a>
+                  <a href="#" class="footer-menu-item">Sports</a>
+                  <a href="#" class="footer-menu-item">Electronics</a>
+                  <a href="#" class="footer-menu-item">Beauty</a>
+                </div>
+              </div>
+              <div class="footer-menu">
+                <p class="footer-menu-title">Expertise</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">System & Software Developement</a>
+                  <a href="#" class="footer-menu-item">Digital Transformation</a>
+                  <a href="#" class="footer-menu-item">Program Language</a>
+                </div>
+              </div>
+              <div class="footer-menu">
+                <p class="footer-menu-title">Our world</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Values & culture</a>
+                  <a href="#" class="footer-menu-item">the talents</a>
+                  <a href="#" class="footer-menu-item">why enam dua</a>
+                </div>
+              </div>
+              <div class="footer-menu">
+                <p class="footer-menu-title">Careers</p>
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Join us</a>
+                </div>
               </div>
             </div>
-
-            <div class="footer-menu">
-              <p class="footer-menu-title">Expertise</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">System & Software Developement</a>
-                <a href="#" class="footer-menu-item">Digital Transformation</a>
-                <a href="#" class="footer-menu-item">Program Language</a>
-              </div>
+            <div class="footer-other-menus">
+              <a href="#" class="footer-other-menu">Contact us</a>
+              <a href="#" class="footer-other-menu">Our offices</a>
+              <a href="#" class="footer-other-menu">Get in touch</a>
             </div>
-
-            <div class="footer-menu">
-              <p class="footer-menu-title">Our world</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">Values & culture</a>
-                <a href="#" class="footer-menu-item">the talents</a>
-                <a href="#" class="footer-menu-item">why enam dua</a>
-              </div>
+            <div class="footer-other-menus">
+              <a href="#" class="footer-other-menu">Follow us</a>
+              <a href="#" class="footer-other-menu">Facebook</a>
+              <a href="#" class="footer-other-menu">Instagram</a>
+              <a href="#" class="footer-other-menu">LinkedIn</a>
+              <a href="#" class="footer-other-menu">Twitter</a>
+              <a href="#" class="footer-other-menu">Youtube</a>
             </div>
-
-            <div class="footer-menu">
-              <p class="footer-menu-title">Careers</p>
-              <div class="footer-menu-items">
-                <a href="#" class="footer-menu-item">Join us</a>
-              </div>
+            <div class="mt-5">
+              <p class="footer-c">© 2021 Enam Dua.</p>
+              <p class="footer-c">All rights reserved.</p>
             </div>
-          </div>
-
-          <div class="footer-other-menus">
-            <a href="#" class="footer-other-menu">Contact us</a>
-            <a href="#" class="footer-other-menu">Our offices</a>
-            <a href="#" class="footer-other-menu">Get in touch</a>
-          </div>
-
-          <div class="footer-other-menus">
-            <a href="#" class="footer-other-menu">Follow us</a>
-            <a href="#" class="footer-other-menu">Facebook</a>
-            <a href="#" class="footer-other-menu">Instagram</a>
-            <a href="#" class="footer-other-menu">LinkedIn</a>
-            <a href="#" class="footer-other-menu">Twitter</a>
-            <a href="#" class="footer-other-menu">Youtube</a>
-          </div>
-
-          <div class="mt-5">
-            <p class="footer-c">© 2021 Enam Dua.</p>
-            <p class="footer-c">All rights reserved.</p>
           </div>
         </div>
       </div>
