update bug fixing

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </div>
           <div class="content-container">
             <p class="hero-text">
-              <b>Enam Dua</b>
+              Enam Dua
               is the catalyst of local digital talents that helps everyone to overcome the global digital challenges. It was founded by a group of local software engineer who set out to show the world that
               <b>local talents are awesome!</b>
             </p>
@@ -198,7 +198,17 @@
           <div class="content-container">
             <div class="row gx-xxl-66px gx-xxxl-110px">
               <div class="col-xl-7">
-                <img src="assets/images/img-description-1.png" class="w-100" />
+                <div class="footer-menu-items">
+                  <a href="#" class="footer-menu-item">Finance</a>
+                  <a href="#" class="footer-menu-item">Education</a>
+                  <a href="#" class="footer-menu-item">E-commerce</a>
+                  <a href="#" class="footer-menu-item">Data Science & Statistic</a>
+                  <a href="#" class="footer-menu-item">Agriculture</a>
+                  <a href="#" class="footer-menu-item">Retail</a>
+                  <a href="#" class="footer-menu-item">Sports</a>
+                  <a href="#" class="footer-menu-item">Electronics</a>
+                  <a href="#" class="footer-menu-item">Beauty</a>
+                </div>
               </div>
               <div class="col-xl-5">
                 <div class="description-content">
