--- a/industry.html
+++ b/industry.html
@@ -130,7 +130,7 @@
                       </div>
                       <div class="col-xl-7 d-flex">
                         <div class="industry-main-content">
-                          <h3 class="industry-main-title">1 Pursuing creativity</h3>
+                          <h3 class="industry-main-title">Pursuing creativity</h3>
                           <p class="industry-main-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
                           <div class="industry-main-logos">
                             <img class="industry-main-logo" src="assets/images/img-partner-1-logo.jpg" />
@@ -159,7 +159,7 @@
                       </div>
                       <div class="col-xl-7 d-flex">
                         <div class="industry-main-content">
-                          <h3 class="industry-main-title">2 Knowledge Accross Archipelago</h3>
+                          <h3 class="industry-main-title">Knowledge Accross Archipelago</h3>
                           <p class="industry-main-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
                           <div class="industry-main-logos">
                             <img class="industry-main-logo" src="assets/images/img-partner-1-logo.jpg" />
@@ -188,7 +188,7 @@
                       </div>
                       <div class="col-xl-7 d-flex">
                         <div class="industry-main-content">
-                          <h3 class="industry-main-title">3 E-commerce Boom</h3>
+                          <h3 class="industry-main-title">E-commerce Boom</h3>
                           <p class="industry-main-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
                           <div class="industry-main-logos">
                             <img class="industry-main-logo" src="assets/images/img-partner-1-logo.jpg" />
@@ -217,7 +217,7 @@
                       </div>
                       <div class="col-xl-7 d-flex">
                         <div class="industry-main-content">
-                          <h3 class="industry-main-title">4 Data Science and Statistics</h3>
+                          <h3 class="industry-main-title">Data Science and Statistics</h3>
                           <p class="industry-main-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
                           <div class="industry-main-logos">
                             <img class="industry-main-logo" src="assets/images/img-partner-1-logo.jpg" />
@@ -246,7 +246,7 @@
                       </div>
                       <div class="col-xl-7 d-flex">
                         <div class="industry-main-content">
-                          <h3 class="industry-main-title">5 Agriculture Industry</h3>
+                          <h3 class="industry-main-title">Agriculture Industry</h3>
                           <p class="industry-main-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
                           <div class="industry-main-logos">
                             <img class="industry-main-logo" src="assets/images/img-partner-1-logo.jpg" />
@@ -275,7 +275,7 @@
                       </div>
                       <div class="col-xl-7 d-flex">
                         <div class="industry-main-content">
-                          <h3 class="industry-main-title">6 Inside and Outside of Court</h3>
+                          <h3 class="industry-main-title">Inside and Outside of Court</h3>
                           <p class="industry-main-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
                           <div class="industry-main-logos">
                             <img class="industry-main-logo" src="assets/images/img-partner-1-logo.jpg" />
@@ -304,7 +304,7 @@
                       </div>
                       <div class="col-xl-7 d-flex">
                         <div class="industry-main-content">
-                          <h3 class="industry-main-title">7 Electronics Industry</h3>
+                          <h3 class="industry-main-title">Electronics Industry</h3>
                           <p class="industry-main-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
                           <div class="industry-main-logos">
                             <img class="industry-main-logo" src="assets/images/img-partner-1-logo.jpg" />
@@ -333,7 +333,7 @@
                       </div>
                       <div class="col-xl-7 d-flex">
                         <div class="industry-main-content">
-                          <h3 class="industry-main-title">8 Knowledge Accross Archipelago</h3>
+                          <h3 class="industry-main-title">Knowledge Accross Archipelago</h3>
                           <p class="industry-main-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
                           <div class="industry-main-logos">
                             <img class="industry-main-logo" src="assets/images/img-partner-1-logo.jpg" />
@@ -362,7 +362,7 @@
                       </div>
                       <div class="col-xl-7 d-flex">
                         <div class="industry-main-content">
-                          <h3 class="industry-main-title">9 Knowledge Accross Archipelago</h3>
+                          <h3 class="industry-main-title">Knowledge Accross Archipelago</h3>
                           <p class="industry-main-text">No word can explain better of what could initiate positive progression in the financial industry other than “creativity”. Enam Dua works with companies that want to push their limit to make impactful changes in this sector. Financial inclusion is nearly impossible without the use of digital technology.</p>
                           <div class="industry-main-logos">
                             <img class="industry-main-logo" src="assets/images/img-partner-1-logo.jpg" />
