--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </a>
               </div>
               <div class="col-3 text-center">
-                <a href="#">
+                <a href="https://www.instagram.com/enamdua.tech/" target="_blank">
                   <img src="assets/images/icon-instagram.png" />
                 </a>
               </div>
@@ -82,7 +82,7 @@
               </a>
             </li>
             <li class="main-nav-icon main-nav-animated">
-              <a href="#">
+              <a href="https://www.instagram.com/enamdua.tech/" target="_blank">
                 <img src="assets/images/icon-instagram.png" />
               </a>
             </li>
@@ -198,17 +198,8 @@
           <div class="content-container">
             <div class="row gx-xxl-66px gx-xxxl-110px">
               <div class="col-xl-7">
-                <div class="footer-menu-items">
-                  <a href="#" class="footer-menu-item">Finance</a>
-                  <a href="#" class="footer-menu-item">Education</a>
-                  <a href="#" class="footer-menu-item">E-commerce</a>
-                  <a href="#" class="footer-menu-item">Data Science & Statistic</a>
-                  <a href="#" class="footer-menu-item">Agriculture</a>
-                  <a href="#" class="footer-menu-item">Retail</a>
-                  <a href="#" class="footer-menu-item">Sports</a>
-                  <a href="#" class="footer-menu-item">Electronics</a>
-                  <a href="#" class="footer-menu-item">Beauty</a>
-                </div>
+                <h2 class="detail-title">Enam dua Expertise</h2>
+                <!-- <img src="assets/images/img-description-1.png" class="w-100" /> -->
               </div>
               <div class="col-xl-5">
                 <div class="description-content">
@@ -335,7 +326,7 @@
             <div class="footer-other-menus">
               <a href="#" class="footer-other-menu">Follow us</a>
               <a href="#" class="footer-other-menu">Facebook</a>
-              <a href="#" class="footer-other-menu">Instagram</a>
+              <a href="https://www.instagram.com/enamdua.tech/" target="_blank" class="footer-other-menu">Instagram</a>
               <a href="#" class="footer-other-menu">LinkedIn</a>
               <a href="#" class="footer-other-menu">Twitter</a>
               <a href="#" class="footer-other-menu">Youtube</a>
