--- a/industry.html
+++ b/industry.html
@@ -49,7 +49,7 @@
                 </a>
               </div>
               <div class="col-3 text-center">
-                <a href="#">
+                <a href="https://www.instagram.com/enamdua.tech/" target="_blank">
                   <img src="assets/images/icon-instagram.png" />
                 </a>
               </div>
@@ -83,7 +83,7 @@
               </a>
             </li>
             <li class="main-nav-icon main-nav-animated">
-              <a href="#">
+              <a href="https://www.instagram.com/enamdua.tech/" target="_blank">
                 <img src="assets/images/icon-instagram.png" />
               </a>
             </li>
@@ -501,7 +501,7 @@
             <div class="footer-other-menus">
               <a href="#" class="footer-other-menu">Follow us</a>
               <a href="#" class="footer-other-menu">Facebook</a>
-              <a href="#" class="footer-other-menu">Instagram</a>
+              <a href="https://www.instagram.com/enamdua.tech/" target="_blank">Instagram</a>
               <a href="#" class="footer-other-menu">LinkedIn</a>
               <a href="#" class="footer-other-menu">Twitter</a>
               <a href="#" class="footer-other-menu">Youtube</a>
