update bug fixing

--- a/industry.html
+++ b/industry.html
@@ -501,7 +501,7 @@
             <div class="footer-other-menus">
               <a href="#" class="footer-other-menu">Follow us</a>
               <a href="#" class="footer-other-menu">Facebook</a>
-              <a href="https://www.instagram.com/enamdua.tech/" target="_blank">Instagram</a>
+              <a href="https://www.instagram.com/enamdua.tech/" target="_blank" class="footer-other-menu">Instagram</a>
               <a href="#" class="footer-other-menu">LinkedIn</a>
               <a href="#" class="footer-other-menu">Twitter</a>
               <a href="#" class="footer-other-menu">Youtube</a>
