--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="col-xl-5">
                   <h2 class="detail-title">Enam dua Expertise</h2>
                 </div>
-                <div class="col-xl-7 mt-4">
+                <div class="col-xl-7 mt-2">
                   <div class="row gy-5">
                     <div class="col-12">
                       <h4 class="detail-content-title">System & Software Development</h4>
@@ -198,8 +198,17 @@
           <div class="content-container">
             <div class="row gx-xxl-66px gx-xxxl-110px">
               <div class="col-xl-7">
-                <h2 class="detail-title">Enam dua Expertise</h2>
-                <!-- <img src="assets/images/img-description-1.png" class="w-100" /> -->
+                <ul class="description-list">
+                  <li class="description-list-menu">Finance</li>
+                  <li class="description-list-menu">Education</li>
+                  <li class="description-list-menu">E-commerce</li>
+                  <li class="description-list-menu">Data Science & Statistic</li>
+                  <li class="description-list-menu">Agriculture</li>
+                  <li class="description-list-menu">Retail</li>
+                  <li class="description-list-menu">Sports</li>
+                  <li class="description-list-menu">Electronics</li>
+                  <li class="description-list-menu">Beauty</li>
+                </ul>
               </div>
               <div class="col-xl-5">
                 <div class="description-content">
