--- a/our-world.html
+++ b/our-world.html
@@ -262,7 +262,7 @@
                   <br />
                   The best way to innovate is by responding our own questions to grow better. Enam Dua doesn’t just speak for today;
                 </p>
-                <p class="why-text fs-1 lh-base m-0">our care and thoughts are also for the future.</p>
+                <p class="why-textt lh-base m-0">our care and thoughts are also for the future.</p>
               </div>
               <div class="col-xl-6">
                 <img src="assets/images/img-why-1.jpg" class="why-img" />
