fixing downloads page

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           <div class="content-container">
             <div class="row gx-xxl-66px gx-xxxl-110px">
               <div class="col-xl-7">
-                <ul class="description-list">
+                <ul class="description-list flex-wrap">
                   <li class="description-list-menu">Finance</li>
                   <li class="description-list-menu">Education</li>
                   <li class="description-list-menu">E-commerce</li>
