--- a/index.html
+++ b/index.html
@@ -198,17 +198,17 @@
           <div class="content-container">
             <div class="row gx-xxl-66px gx-xxxl-110px">
               <div class="col-xl-7">
-                <ul class="description-list flex-wrap">
-                  <li class="description-list-menu">Finance</li>
-                  <li class="description-list-menu">Education</li>
-                  <li class="description-list-menu">E-commerce</li>
-                  <li class="description-list-menu">Data Science & Statistic</li>
-                  <li class="description-list-menu">Agriculture</li>
-                  <li class="description-list-menu">Retail</li>
-                  <li class="description-list-menu">Sports</li>
-                  <li class="description-list-menu">Electronics</li>
-                  <li class="description-list-menu">Beauty</li>
-                </ul>
+                <div class="description-list">
+                  <span class="description-list-menu">Finance</span>
+                  <span class="description-list-menu">Education</span>
+                  <span class="description-list-menu">E-commerce</span>
+                  <span class="description-list-menu">Data Science & Statistic</span>
+                  <span class="description-list-menu">Agriculture</span>
+                  <span class="description-list-menu">Retail</span>
+                  <span class="description-list-menu">Sports</span>
+                  <span class="description-list-menu">Electronics</span>
+                  <span class="description-list-menu">Beauty</span>
+                </div>
               </div>
               <div class="col-xl-5">
                 <div class="description-content">
@@ -274,13 +274,58 @@
                 </div>
               </div>
               <div class="tab-pane fade" id="partner-2" role="tabpanel">
-                <h3 class="text-ed-white-1">partner-2</h3>
+                <div class="row">
+                  <div class="col-xl-6">
+                    <h4 class="partner-title">
+                      Kasbon by
+                      <br />
+                      Djurnee
+                    </h4>
+                    <p class="partner-detail">Indonesia’s Digital Administration Platform</p>
+                    <p class="text-ed-white-1 fw-bold">user interface</p>
+                    <p class="text-ed-white-1 fw-bold">user experience</p>
+                    <p class="text-ed-white-1 fw-bold m-0">web design</p>
+                  </div>
+                  <div class="col-xl-6">
+                    <p class="partner-text">Enam Dua will be a pool of potential local talents. It’ll be a stepping stone for junior engineers such as SMK students and amateurs. Giving them the necessary exposure to have a bit of taste of the real global digital industry. Making them ready by working together side by side with the best professional local talents in challenging projects, Enam Dua strives to produce the world class talents as much as possible.</p>
+                  </div>
+                </div>
               </div>
               <div class="tab-pane fade" id="partner-3" role="tabpanel">
-                <h3 class="text-ed-white-1">partner-3</h3>
+                <div class="row">
+                  <div class="col-xl-6">
+                    <h4 class="partner-title">
+                      Kasbon by
+                      <br />
+                      Djurnee
+                    </h4>
+                    <p class="partner-detail">Indonesia’s Digital Administration Platform</p>
+                    <p class="text-ed-white-1 fw-bold">user interface</p>
+                    <p class="text-ed-white-1 fw-bold">user experience</p>
+                    <p class="text-ed-white-1 fw-bold m-0">web design</p>
+                  </div>
+                  <div class="col-xl-6">
+                    <p class="partner-text">Enam Dua will be a pool of potential local talents. It’ll be a stepping stone for junior engineers such as SMK students and amateurs. Giving them the necessary exposure to have a bit of taste of the real global digital industry. Making them ready by working together side by side with the best professional local talents in challenging projects, Enam Dua strives to produce the world class talents as much as possible.</p>
+                  </div>
+                </div>
               </div>
               <div class="tab-pane fade" id="partner-4" role="tabpanel">
-                <h3 class="text-ed-white-1">partner-4</h3>
+                <div class="row">
+                  <div class="col-xl-6">
+                    <h4 class="partner-title">
+                      Kasbon by
+                      <br />
+                      Djurnee
+                    </h4>
+                    <p class="partner-detail">Indonesia’s Digital Administration Platform</p>
+                    <p class="text-ed-white-1 fw-bold">user interface</p>
+                    <p class="text-ed-white-1 fw-bold">user experience</p>
+                    <p class="text-ed-white-1 fw-bold m-0">web design</p>
+                  </div>
+                  <div class="col-xl-6">
+                    <p class="partner-text">Enam Dua will be a pool of potential local talents. It’ll be a stepping stone for junior engineers such as SMK students and amateurs. Giving them the necessary exposure to have a bit of taste of the real global digital industry. Making them ready by working together side by side with the best professional local talents in challenging projects, Enam Dua strives to produce the world class talents as much as possible.</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
