--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="row gx-xxl-66px gx-xxxl-110px">
               <div class="col-xl-7">
                 <div class="description-list">
-                  <span class="description-list-menu active">Finance</span>
+                  <span class="description-list-menu">Finance</span>
                   <span class="description-list-menu">Education</span>
                   <span class="description-list-menu">E-commerce</span>
                   <span class="description-list-menu">Data Science & Statistic</span>
